tests/ui/main_macro/fail/bad_flag.rs
use chronographer::main;

#[main(should_fail)]
async fn main(sched: MyScheduler) {}